<resources>
    <string name="app_name">Social-Box</string>

    <string name="title_login">Sign in</string>
    <string name="title_driving">Driving</string>
    <string name="title_activity_base_main">Social-Box</string>

    <string name="text_welcome">Hi *NAME*, see your rating below!</string>
    <string name="text_atAGlance">At a Glance</string>
    <string name="text_journeys">Journeys</string>
    <string name="text_home">Home</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_mainJourneys">Journeys</string>
    <string name="text_mainFriends">Friends</string>
    <string name="text_welcomeDashboard">*NAME*\'s Dashboard</string>
    <string name="text_breakdownDashboard">Rating Breakdown</string>
    <string name="text_recording">Recording -</string>

    <string name="button_go">Go!</string>
    <string name="button_stop">Stop!</string>

    <string name="atAGlance_friends">Friends</string>
    <string name="atAGlance_journeys">Journeys</string>

    <string name="dashboard_feedback">Feedback</string>
    <string name="dashboard_feedbackContent">Here is some feedback. Here is some feedback. Here is some feedback. Here is some feedback.</string>

    <string name="driving_snackbar">Press once more to stop recording.</string>

    <string name="rating_figure">4.0</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="time_title">Time of Day</string>
    <string name="speed_title">Speed</string>
    <string name="braking_title">Braking</string>
    <string name="acceleration_title">Acceleration</string>
    <string name="journeys_statistics">Statistics</string>
    <string name="journeys_statisticsContent">Here are some statistics. Here are some statistics. Here are some statistics. Here are some statistics.</string>
    <string name="text_welcomeJourney">*DAY*\'s Journey</string>
    <string name="journeys_welcome"><u>Journeys</u></string>
    <string name="friends_welcome"><u>Friends</u></string>
    <string name="error_journeys">No Journeys To Show!</string>
    <string name="error_friends">No Friends To Show!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_pending_friends">AddPendingFriendsActivity</string>
    <string name="text_pending">Pending Requests</string>
</resources>
