<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <LinearLayout
        android:id="@+id/linearLayout_dashboardWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_welcomeDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/text_welcomeDashboard"
            android:textAlignment="viewStart"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="174dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/ratingBar_dashboardOverall"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="@integer/no_stars"
                android:rating="4"
                android:stepSize="0.5"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="174dp" />

            <TextView
                android:id="@+id/textView_overallRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating_figure"
                android:textAlignment="viewStart"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_dashboardOther"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_dashboardWelcome">

        <TextView
            android:id="@+id/textView_breakdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/text_breakdownDashboard"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="174dp" />

        <ListView
            android:id="@+id/listView_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_dashboardWelcome"
        app:layout_constraintVertical_bias="0.951">

        <TextView
            android:id="@+id/textView_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_feedback"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_feedbackContent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>