<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout_journeyWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_welcomeDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/text_welcomeDashboard"
            android:textAlignment="viewStart"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="174dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/ratingBar_dashboardOverall"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="@integer/no_stars"
                android:rating="4.0"
                android:stepSize="0.5"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="174dp" />

            <TextView
                android:id="@+id/textView_overallRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating_figure"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_breakdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/text_breakdownDashboard"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_journeyWelcome" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_acceleration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/cardView_speed"
        app:layout_constraintEnd_toStartOf="@+id/cardView_braking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_breakdown">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_accelerationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceleration_title"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/ratingBar_acceleration"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="@integer/no_stars"
                android:rating="4"
                android:stepSize="0.5" />

            <ImageView
                android:id="@+id/imageView_acceleration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_sentiment_satisfied_black_48dp"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_braking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/cardView_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView_acceleration"
        app:layout_constraintTop_toBottomOf="@+id/textView_breakdown">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_reverse_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_brakingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/braking_title"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/ratingBar_braking"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="@integer/no_stars"
                android:rating="4"
                android:stepSize="0.5" />

            <ImageView
                android:id="@+id/imageView_braking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_sentiment_satisfied_black_48dp"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_speed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_journeyStatistics"
        app:layout_constraintEnd_toStartOf="@+id/cardView_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_acceleration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_speedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_title"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/ratingBar_speed"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="@integer/no_stars"
                android:rating="5"
                android:stepSize="0.5" />

            <ImageView
                android:id="@+id/imageView_speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_sentiment_very_satisfied_black_48dp"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_journeyStatistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView_speed"
        app:layout_constraintTop_toBottomOf="@+id/cardView_braking">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_reverse_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_timeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_title"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/ratingBar_time"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="@integer/no_stars"
                android:rating="3"
                android:stepSize="0.5" />

            <ImageView
                android:id="@+id/imageView_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_sentiment_neutral_black_48dp"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout_journeyStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_logout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView_feedbackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_feedback"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_feedbackContent" />
    </LinearLayout>

    <Button
        android:id="@+id/button_logout"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_capsule"
        android:clickable="true"
        android:enabled="true"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/button_logout"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_time" />

</android.support.constraint.ConstraintLayout>